Add color swathes to the page and Title

--- a/public/index.html
+++ b/public/index.html
@@ -7,28 +7,24 @@
       <h1>Painters Palette</h1>
     </header>
     <main class='palette'>
-      <section class='color'>
+      <section class='color a'>
         <div class='hex1'></div>
         <div class='lock'></div>
       </section>
-      <section class='color'>
+      <section class='color b'>
         <div class='hex2'></div>
         <div class='lock'></div>
       </section>
-      <section class='color'>
+      <section class='color c'>
         <div class='hex3'></div>
         <div class='lock'></div>
       </section>      
-      <section class='color'>
+      <section class='color d'>
         <div class='hex4'></div>
         <div class='lock'></div>
       </section>      
-      <section class='color'>
+      <section class='color e'>
         <div class='hex5'></div>
-        <div class='lock'></div>
-      </section>
-      <section class='color'>
-        <div class='hex6'></div>
         <div class='lock'></div>
       </section>
     </main>
