--- a/public/index.html
+++ b/public/index.html
@@ -9,27 +9,33 @@
     <main class='palette'>
       <section class='color a'>
         <div class='hex1'></div>
-        <div class='lock'></div>
+        <div class='lock a'></div>
       </section>
       <section class='color b'>
         <div class='hex2'></div>
-        <div class='lock'></div>
+        <div class='lock b'></div>
       </section>
       <section class='color c'>
         <div class='hex3'></div>
-        <div class='lock'></div>
+        <div class='lock c'></div>
       </section>      
       <section class='color d'>
         <div class='hex4'></div>
-        <div class='lock'></div>
+        <div class='lock d'></div>
       </section>      
       <section class='color e'>
         <div class='hex5'></div>
-        <div class='lock'></div>
+        <div class='lock' e></div>
       </section>
     </main>
-    <section class='projects'>
+    <section class='projects-section'>
+      <section class='project-header'>
+        <h2>Projects</h2>
+      </section>
+      <section class='projects'>
 
+      </section>
     </section>
   </body>
+  <script src="javascript.js"></script>
 </html>
