Fix some styling, wrong branch

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <header class='header'>
       <h1>Painters Palette</h1>
     </header>
+    <nav><button class='nav-button'>Mix Paint</button></nav>
     <main class='palette'>
       <section class='color a'>
         <div class='hex1'></div>
@@ -33,7 +34,7 @@
         <h2>Projects</h2>
       </section>
       <section class='projects'>
-
+        <input class='project-name-input' type='text'/><button>Save Project</button>
       </section>
     </section>
   </body>
