--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
       <link rel="stylesheet" type="text/css" href="css/styles.css">
-      <link href="https://fonts.googleapis.com/css?family=Dosis:600|Sedgwick+Ave" rel="stylesheet">  </head>
+      <link href="https://fonts.googleapis.com/css?family=Dosis:600|Sedgwick+Ave" rel="stylesheet">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  </head>
   <body>
     <header class='header'>
       <h1>Painters Palette</h1>
@@ -10,23 +11,18 @@
     <main class='palette'>
       <section class='color a'>
         <div class='hex1'></div>
-        <div class='lock a'></div>
       </section>
       <section class='color b'>
         <div class='hex2'></div>
-        <div class='lock b'></div>
       </section>
       <section class='color c'>
         <div class='hex3'></div>
-        <div class='lock c'></div>
       </section>      
       <section class='color d'>
         <div class='hex4'></div>
-        <div class='lock d'></div>
       </section>      
       <section class='color e'>
         <div class='hex5'></div>
-        <div class='lock' e></div>
       </section>
     </main>
     <section class='projects-section'>
@@ -37,6 +33,7 @@
         <input class='project-name-input' type='text'/><button>Save Project</button>
       </section>
     </section>
+    <script src="/js/scripts.js"></script>
   </body>
-  <script src="javascript.js"></script>
+
 </html>
