--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,38 @@
 <html>
   <head>
-      <link rel="stylesheet" type="text/css" href="css/styles.css">
-      <link href="https://fonts.googleapis.com/css?family=Dosis:600|Sedgwick+Ave" rel="stylesheet">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  </head>
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Dosis:600|Sedgwick+Ave"
+      rel="stylesheet"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  </head>
   <body>
-    <header class='header'>
-      <h1>Painters Palette</h1>
-    </header>
-    <nav><button class='nav-button'>Mix Paint</button></nav>
-    <main class='palette'>
-      <section class='color a'>
-        <div class='hex1'></div>
+    <header class="header"><h1>Painters Palette</h1></header>
+    <nav><button class="nav-button">Mix Paint</button></nav>
+    <main class="palette">
+      <section class=" hex1 color a 1">
+        <button class="unlock">Click to Lock</button>
       </section>
-      <section class='color b'>
-        <div class='hex2'></div>
+      <section class=" hex2 color b 2">
+        <button class="unlock">Click to Lock</button>
       </section>
-      <section class='color c'>
-        <div class='hex3'></div>
-      </section>      
-      <section class='color d'>
-        <div class='hex4'></div>
-      </section>      
-      <section class='color e'>
-        <div class='hex5'></div>
+      <section class="hex3 color c 3">
+        <button class="unlock">Click to Lock</button>
+      </section>
+      <section class="hex4 color d 4">
+        <button class="unlock">Click to Lock</button>
+      </section>
+      <section class="hex5 color e 5">
+        <button class="unlock">Click to Lock</button>
       </section>
     </main>
-    <section class='projects-section'>
-      <section class='project-header'>
-        <h2>Projects</h2>
-      </section>
-      <section class='projects'>
-        <input class='project-name-input' type='text'/><button>Save Project</button>
+    <section class="projects-section">
+      <section class="project-header"><h2>Projects</h2></section>
+      <section class="projects">
+        <input class="project-name-input" type="text" /><button>
+          Save Project
+        </button>
       </section>
     </section>
     <script src="/js/scripts.js"></script>
