Add project to DB

--- a/public/index.html
+++ b/public/index.html
@@ -10,25 +10,25 @@
   <body>
     <header class="header"><h1>Painters Palette</h1></header>
     <nav>
-      <button class="nav-button">Mix Paint</button>
+      <button class="mix-button">Mix Paint</button>
       <input class="project-name-input" type="text" />
       <button class='project-create-button'> Save Project </button>
     </nav>
     <main class="palette">
       <section class=" hex1 color a 1">
-        <button class="unlock">Click to Lock</button>
+        <button class="unlock"></button>
       </section>
       <section class=" hex2 color b 2">
-        <button class="unlock">Click to Lock</button>
+        <button class="unlock"></button>
       </section>
       <section class="hex3 color c 3">
-        <button class="unlock">Click to Lock</button>
+        <button class="unlock"></button>
       </section>
       <section class="hex4 color d 4">
-        <button class="unlock">Click to Lock</button>
+        <button class="unlock"></button>
       </section>
       <section class="hex5 color e 5">
-        <button class="unlock">Click to Lock</button>
+        <button class="unlock"></button>
       </section>
     </main>
     <section class="projects-section">
