Add palette name input, Work on saving palette to DB with Project Id

--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,15 @@
       <section class="project-header">
         <h2>Projects</h2>
       </section>
-      <label for="project-select">Choose a project:</label>
-      <select id="project-select">
-          <option value="">--Please choose a project--</option>
-      </select>
-      <button class='save-palette'>Save this Palette</button>
+      <form class='projects-form'>
+        <label for="project-select">Choose a project:</label>
+        <select id="project-select">
+            <option value="">--Please choose a project--</option>
+        </select>
+        <button class='save-palette'>Save this Palette</button>
+        <p>Pallete Name: </p>
+        <input class='palette-name-input'></input>
+      </form>
       <ul class="projects">
       </ul>
     </section>
