--- a/public/index.html
+++ b/public/index.html
@@ -35,13 +35,13 @@
       <section class="project-header">
         <h2>Projects</h2>
       </section>
-      <form class='projects-form'>
-        <label for="project-select">Choose a project:</label>
+      <form class='projects-form' aria-label='select a project && name the palette you wish to save'>
+        <label class='label' for="project-select">Choose a project:</label>
         <select id="project-select">
             <option value="">--Please choose a project--</option>
         </select>
         <button class='save-palette'>Save this Palette</button>
-        <p>Pallete Name: </p>
+        <p class='palette-name-DOM'>Pallete Name: </p>
         <input class='palette-name-input'></input>
       </form>
       <ul class="projects">
